<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".admin.AdminOrderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdminOrderRefresh"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:text="@string/refresh_order_list" />


            <ScrollView
                android:id="@+id/svAdminOrderList"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginHorizontal="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvAdminOrderList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:text="orders"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </ScrollView>



            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:theme="@style/Theme.MaterialComponents.DayNight"
                app:cardCornerRadius="30dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/etAdminOrderDetailsGetById"
                        android:hint="@string/enter_order_id"
                        android:inputType="numberSigned"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnAdminOrderDetailsGetById"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_order_details" />

                    <TextView
                        android:id="@+id/tvAdminOrderDetailsGetById"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        tools:text="order details"/>


                </androidx.appcompat.widget.LinearLayoutCompat>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:theme="@style/Theme.MaterialComponents.DayNight"
                app:cardCornerRadius="30dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/etAdminOrderDeleteById"
                        android:hint="@string/enter_order_id"
                        android:inputType="numberSigned"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnAdminOrderDeleteById"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_order" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </com.google.android.material.card.MaterialCardView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdminOrderDeleteAll"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:text="@string/delete_all_orders"
                android:background="#FF0000"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>