...
            android:id="@+id/action_adminHomeFragment_to_adminCustomerFragment"
            app:destination="@id/adminCustomerFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_adminHomeFragment_to_adminOrderFragment"
            app:destination="@id/adminOrderFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_adminHomeFragment_to_adminProductsFragment"
            app:destination="@id/adminProductsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_adminHomeFragment_to_logInFragment"
            app:destination="@id/logInFragment"
            app:enterAnim="@android:anim/fade_in"
...
