<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.AdminProductsFragment"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:theme="@style/Theme.MaterialComponents.DayNight"
                app:cardCornerRadius="30dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:gravity="center">


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etAdminProductsAddName"
                        android:hint="@string/enter_product_name"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etAdminProductsAddPrice"
                        android:hint="@string/enter_product_price"
                        android:inputType="numberSigned"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etAdminProductsAddDescription"
                        android:hint="@string/enter_product_description"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnAdminProductsAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_product" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:theme="@style/Theme.MaterialComponents.DayNight"
                app:cardCornerRadius="30dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etAdminProductsUpdateId"
                        android:hint="@string/enter_product_id"
                        android:inputType="numberSigned"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etAdminProductsUpdateName"
                        android:hint="@string/enter_product_name"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etAdminProductsUpdatePrice"
                        android:hint="@string/enter_product_price"
                        android:inputType="numberSigned"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etAdminProductsUpdateDescription"
                        android:hint="@string/enter_product_description"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnAdminProductsUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update_product" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:theme="@style/Theme.MaterialComponents.DayNight"
                app:cardCornerRadius="30dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etAdminProductsGetById"
                        android:hint="@string/enter_product_id"
                        android:inputType="numberSigned"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnAdminProductsGetById"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_product" />

                    <TextView
                        android:id="@+id/tvAdminProductsGetId"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/id"/>

                    <TextView
                        android:id="@+id/tvAdminProductsGetName"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name"/>

                    <TextView
                        android:id="@+id/tvAdminProductsGetPrice"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/price"/>

                    <TextView
                        android:id="@+id/tvAdminProductsGetDescription"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/description"/>


                </androidx.appcompat.widget.LinearLayoutCompat>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:theme="@style/Theme.MaterialComponents.DayNight"
                app:cardCornerRadius="30dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etAdminProductsDeleteById"
                        android:hint="@string/enter_product_id"
                        android:inputType="numberSigned"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnAdminProductsDeleteById"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_product" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </com.google.android.material.card.MaterialCardView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdminProductsDeleteAll"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:text="@string/delete_all_products"
                android:background="#FF0000"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>






</androidx.appcompat.widget.LinearLayoutCompat>